<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">InterfacesAvanzadas</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_fav">A Favoritos</string>
    <string name="action_share">Compartir</string>
    <string name="action_buscar">Buscar</string>
    <string name="Imagen_hotel">Buscar</string>
    <string name="compartir">Prueba Android desde el app</string>
    <string name="msg_txt">Dejanos tu calificación</string>
    <string name="action_dialog">Dejanos tu calificación en dialogo</string>

    <string-array name="array_op">
        <item>Bueno</item>
        <item>Malo</item>
    </string-array>

    <string name="togle_yes">Si</string>
    <string name="togle_no">No</string>

    <string-array name="dialogo_option">
        <item>Opción A</item>
        <item>Opción B</item>
    </string-array>

    <string name="img_description">Encabezado</string>
    <string name="msg_yes">Sí</string>
    <string name="msg_no">No</string>
    <string name="msg_share">Compartir usando</string>
    <string name="msg_rate">Deja tu calificación</string>
    <string name="msg_recommendation">¿Nos recomendarías?</string>
    <string name="msg_front_desk">¿cómo consideras el servicio de la recepción?</string>
    <string name="msg_front_desk_0">Malo</string>
    <string name="msg_front_desk_100">Bueno</string>
    <string name="dialog_title">¿Desea enviar los datos?</string>
    <string name="title_activity_room_list">Listado de habitaciones</string>
    <string name="list_separator_standard">Estándar</string>
    <string name="list_separator_luxury">De lujo</string>

    <string-array name="array_rate">
        <item>Excelente</item>
        <item>Bueno</item>
        <item>Regular</item>
        <item>Deficiente</item>
        <item>Necesita mejorar</item>
    </string-array>
    <string-array name="array_disclaimer">
        <item>Me hago totalmente responsable</item>
        <item>Yo no fui!</item>
    </string-array>
    <string-array name="array_rooms_standard">
        <item>101</item>
        <item>102</item>
        <item>203</item>
        <item>204</item>
        <item>106</item>
        <item>208</item>
        <item>209</item>
    </string-array>
    <string-array name="array_rooms_luxury">
        <item>301</item>
        <item>302</item>
        <item>303</item>
        <item>304</item>
        <item>305</item>
        <item>306</item>
        <item>307</item>
        <item>308</item>
        <item>309</item>
        <item>310</item>
    </string-array>

    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_activity_drawer">MainActivityDrawer</string>
    
    <string-array name="array_drawer_options">
        <item>Habitaciones</item>
        <item>Términos y Condiciones</item>
    </string-array>
    <string name="drawer_open">Abrir</string>
    <string name="drawer_close">Cerrar</string>
    
    

</resources>
